<resources xmlns:xliff="http://schemas.android.com/tools">
    <!-- App Title Strings -->
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_detail">Movie Detail</string>
    <string name="title_activity_reviews">User Reviews</string>
    <string name="title_activity_trailers">Trailers</string>

    <!-- Menu Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <!-- Sorting preferences -->
    <string name="pref_preferences">User Preferences</string>

    <string name="pref_sort_label">Sort Movies By</string>
    <string name="pref_sort_key">sort</string>
    <string name="pref_sort_default">popularity.desc</string>

    <string name="pref_sort_popularity_label">Popularity</string>
    <string name="pref_sort_rating_label">Rating</string>
    <string name="pref_sort_favorites_label">Favorites</string>

    <string name="pref_sort_popularity">popularity.desc</string>
    <string name="pref_sort_rating">vote_average.desc</string>
    <string name="pref_sort_favorites">favorites</string>

    <!-- Detail Labels -->
    <string name="release_date_label">Release Date</string>
    <string name="rating_label">Rating</string>
    <string name="synopsis_label">Synopsis</string>
    <string name="reviews_label">User Reviews</string>
    <string name="trailer_label">Trailers</string>

    <!-- Miscellaneous -->
    <string name="no_reviews_found">No reviews found</string>
    <string name="no_trailers_found">No trailers found</string>
    <string name="no_movies_found">No movies found</string>
    <string name="no_movie_selected">No movie selected</string>

    <!-- String Formatting -->
    <string name="format_rating"><xliff:g id="rating">%1$.1f</xliff:g>/10.0</string>
    <string name="format_sort">Sorting by: %1$s</string>

</resources>
