<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ruiadrmartins.popularmovies.DetailActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/detail_movie_title"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/checkFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/starStyle"
                android:checked="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/detail_movie_details"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date_label"
                    android:id="@+id/release_date_label"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_movie_date"
                    android:textAppearance="?android:textAppearanceSmall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_label"
                    android:id="@+id/rating_label"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_movie_rating"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/format_rating"/>

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/detail_movie_poster"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:textAppearance="?android:textAppearanceLarge"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/synopsis_label"
            android:id="@+id/synopsis_label"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:paddingTop="@dimen/activity_vertical_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detail_movie_synopsis"
            android:textAppearance="?android:textAppearanceSmall"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trailer_label"
            android:id="@+id/trailer_button"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:paddingTop="@dimen/activity_vertical_margin" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reviews_label"
            android:id="@+id/review_button"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:paddingTop="@dimen/activity_vertical_margin" />
    </LinearLayout>



</ScrollView>
